# hp-sku-photo-scraper

./: .gitignore  README.md  pyproject.toml
data/: skus.txt
src/hp_sku_photo_scraper/: browser.py  cli.py  io.py  scraper.py
